bug(fix): Home link color misaligned

--- a/src/components/organisms/navigation/styles.sass
+++ b/src/components/organisms/navigation/styles.sass
@@ -40,6 +40,7 @@
           letter-spacing: 1.67px
           padding: 35px 0 0
           &:hover
+            transition: color 0.15s linear
             color: #FF7F50
       ul
         padding: 51px 0 0
